--- a/recipes/bourbon-sour.html
+++ b/recipes/bourbon-sour.html
@@ -43,7 +43,7 @@
   <div class="corner-ornament corner-bl"></div>
   <div class="corner-ornament corner-br"></div>
   <div class="content">
-    <a href="../cocktail-menu.html" class="back-link"><span>&larr;</span> BACK TO MENU</a>
+    <a href="../index.html" class="back-link"><span>&larr;</span> BACK TO MENU</a>
     <div class="recipe-card">
       <div class="recipe-header">
         <h1 class="recipe-name">BOURBON SOUR</h1>
