--- a/recipes/negroni.html
+++ b/recipes/negroni.html
@@ -190,7 +190,7 @@
   <div class="corner-ornament corner-br"></div>
 
   <div class="content">
-    <a href="../cocktail-menu.html" class="back-link">
+    <a href="../index.html" class="back-link">
       <span>&larr;</span> BACK TO MENU
     </a>
 
