--- a/recipes/manhattan.html
+++ b/recipes/manhattan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <title>Manhattan - NYE Cocktails</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&family=Bebas+Neue&display=swap');
@@ -23,6 +23,8 @@
     .recipe-card::before { top: 16px; left: 50%; transform: translateX(-50%); }
     .recipe-card::after { bottom: 16px; left: 50%; transform: translateX(-50%); }
     .recipe-header { text-align: center; margin-bottom: 24px; }
+    .cocktail-illustration { display: flex; justify-content: center; margin: 24px 0; }
+    .cocktail-illustration svg { width: 120px; height: 120px; }
     .recipe-name { font-family: 'Bebas Neue', sans-serif; font-size: 36px; letter-spacing: 4px; margin: 0; color: #f5f0e8; }
     .recipe-flavor { font-style: italic; color: #c9a227; margin: 8px 0 0 0; font-size: 16px; }
     .divider { height: 1px; background: linear-gradient(90deg, transparent, #c9a227, transparent); margin: 20px 0; }
@@ -48,6 +50,27 @@
       <div class="recipe-header">
         <h1 class="recipe-name">MANHATTAN</h1>
         <p class="recipe-flavor">Smooth &amp; Spicy</p>
+      </div>
+      <div class="cocktail-illustration">
+        <svg viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
+          <!-- Coupe glass bowl -->
+          <ellipse cx="60" cy="45" rx="35" ry="12" fill="none" stroke="#c9a227" stroke-width="2"/>
+          <path d="M25 45 Q30 75 60 80 Q90 75 95 45" fill="none" stroke="#c9a227" stroke-width="2"/>
+          <!-- Liquid fill -->
+          <path d="M28 47 Q33 72 60 76 Q87 72 92 47 Q75 55 60 55 Q45 55 28 47 Z"
+                fill="rgba(201, 162, 39, 0.15)"/>
+          <!-- Stem -->
+          <line x1="60" y1="80" x2="60" y2="100" stroke="#c9a227" stroke-width="2"/>
+          <!-- Base -->
+          <ellipse cx="60" cy="102" rx="18" ry="4" fill="none" stroke="#c9a227" stroke-width="2"/>
+          <!-- Cherry garnish in glass -->
+          <circle cx="60" cy="58" r="6" fill="rgba(201, 162, 39, 0.3)" stroke="#c9a227" stroke-width="1.5"/>
+          <path d="M60 52 Q62 46 68 42" fill="none" stroke="#c9a227" stroke-width="1.5" stroke-linecap="round"/>
+          <!-- Decorative art deco lines -->
+          <line x1="20" y1="115" x2="40" y2="115" stroke="#c9a227" stroke-width="1" opacity="0.5"/>
+          <line x1="80" y1="115" x2="100" y2="115" stroke="#c9a227" stroke-width="1" opacity="0.5"/>
+          <circle cx="60" cy="115" r="2" fill="#c9a227" opacity="0.5"/>
+        </svg>
       </div>
       <div class="divider"></div>
       <div class="section">
